--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,7 +7,7 @@
     "role": "frontend"
   },
   "scripts": {
-    "start": "backstage-cli package start",
+    "start": "set PORT=3200 && backstage-cli package start",
     "build": "backstage-cli package build",
     "clean": "backstage-cli package clean",
     "test": "backstage-cli package test",
