Refactor code structure for improved readability and maintainability

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -96,6 +96,7 @@ catalog:
     pullRequestBranchName: backstage-integration
   rules:
     - allow: [Component, System, API, Resource, Location]
+  useUrlReadersSearch: true
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
