--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,8 +43,9 @@
     "@backstage/plugin-techdocs-react": "^1.2.0",
     "@backstage/plugin-user-settings": "^0.8.5",
     "@backstage/theme": "^0.6.7",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^5.12.2",
+    "@mui/icons-material": "^5.12.2",
+    "@mui/styles": "^5.12.2",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
