--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "@backstage/plugin-app-backend": "^0.3.65",
     "@backstage/plugin-auth-backend": "^0.22.0",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.4",
+    "@backstage/plugin-events-backend": "^0.3.0",
     "@backstage/plugin-catalog-backend": "^1.22.0",
     "@backstage/plugin-catalog-backend-module-gitlab": "^0.3.0",
     "@backstage/plugin-catalog-backend-module-logs": "^0.0.1",
