--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     ]
   },
   "devDependencies": {
-    "@backstage/cli": "^0.26.0",
+    "@backstage/cli": "^0.33.1",
     "@spotify/prettier-config": "^15.0.0",
     "concurrently": "^8.0.0",
-    "lerna": "^7.3.0",
+    "lerna": "^8.2.3",
     "node-gyp": "^10.0.0",
     "prettier": "^2.3.2",
     "typescript": "~5.2.0"
@@ -52,5 +52,8 @@
     "*.{json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@backstage/plugin-permission-backend": "0.7.2"
   }
 }
