--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,34 +19,39 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage"
   },
   "dependencies": {
-    "@backstage/app-defaults": "^1.5.0",
+    "@backstage/app-defaults": "^1.2.1",
+    "@backstage/backend-common": "0.15.0",
+    "@backstage/backend-defaults": "0.2.18",
     "@backstage/catalog-model": "^1.5.0",
-    "@backstage/cli": "^0.26.0",
+    "@backstage/cli": "^0.33.1",
     "@backstage/core-app-api": "^1.12.0",
     "@backstage/core-components": "^0.17.4",
     "@backstage/core-plugin-api": "^1.9.0",
     "@backstage/integration-react": "^1.1.23",
-    "@backstage/plugin-api-docs": "^0.11.0",
-    "@backstage/plugin-catalog": "^1.19.0",
+    "@backstage/plugin-api-docs": "^0.9.1",
+    "@backstage/plugin-auth-backend": "0.25.2",
+    "@backstage/plugin-catalog": "^1.9.0",
     "@backstage/plugin-catalog-common": "^1.0.22",
-    "@backstage/plugin-catalog-graph": "^0.4.0",
+    "@backstage/plugin-catalog-graph": "^0.2.28",
     "@backstage/plugin-catalog-import": "^0.10.7",
     "@backstage/plugin-catalog-react": "^1.11.0",
     "@backstage/plugin-github-actions": "^0.6.13",
-    "@backstage/plugin-org": "^0.6.22",
+    "@backstage/plugin-org": "^0.6.6",
+    "@backstage/plugin-permission-backend": "0.7.2",
     "@backstage/plugin-permission-react": "^0.4.21",
-    "@backstage/plugin-scaffolder": "^1.19.0",
-    "@backstage/plugin-search": "^1.4.7",
-    "@backstage/plugin-search-react": "^1.7.7",
-    "@backstage/plugin-techdocs": "^1.10.0",
-    "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.7",
-    "@backstage/plugin-techdocs-react": "^1.2.0",
-    "@backstage/plugin-user-settings": "^0.8.5",
+    "@backstage/plugin-scaffolder": "^1.12.0",
+    "@backstage/plugin-search": "^1.1.1",
+    "@backstage/plugin-search-react": "^1.5.1",
+    "@backstage/plugin-techdocs": "^1.6.0",
+    "@backstage/plugin-techdocs-module-addons-contrib": "^1.0.11",
+    "@backstage/plugin-techdocs-react": "^1.1.4",
+    "@backstage/plugin-user-settings": "^0.7.1",
     "@backstage/theme": "^0.6.7",
-    "@mui/material": "^5.12.2",
     "@mui/icons-material": "^5.12.2",
+    "@mui/material": "^5.12.2",
     "@mui/styles": "^5.12.2",
     "history": "^5.0.0",
+    "lerna": "8.2.3",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
