--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,35 +16,48 @@
     "build-image": "docker build ../.. -f Dockerfile --tag backstage-backend --build-arg PKG=packages/backend"
   },
   "dependencies": {
-    "@backstage/backend-common": "^0.25.0",
-    "@backstage/backend-defaults": "^0.10.0",
-    "@backstage/backend-tasks": "^0.5.22",
+    "@backstage/app-defaults": "1.2.1",
+    "@backstage/backend-common": "^0.15.0",
+    "@backstage/backend-defaults": "^0.2.18",
+    "@backstage/backend-tasks": "^0.3.4",
     "@backstage/catalog-client": "^1.6.4",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/config": "^1.2.0",
-    "@backstage/plugin-app-backend": "^0.3.65",
-    "@backstage/plugin-auth-backend": "^0.22.0",
-    "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.4",
-    "@backstage/plugin-catalog-backend": "^1.22.0",
-    "@backstage/plugin-catalog-backend-module-gitlab": "^0.3.0",
-    "@backstage/plugin-catalog-backend-module-logs": "^0.0.1",
-    "@backstage/plugin-permission-backend": "^0.5.55",
-    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.1.21",
-    "@backstage/plugin-proxy-backend": "^0.4.15",
-    "@backstage/plugin-scaffolder-backend": "^1.23.0",
-    "@backstage/plugin-search-backend": "^1.5.7",
+    "@backstage/plugin-api-docs": "0.9.1",
+    "@backstage/plugin-app-backend": "^0.5.4",
+    "@backstage/plugin-auth-backend": "^0.25.2",
+    "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.10",
+    "@backstage/plugin-catalog": "1.9.0",
+    "@backstage/plugin-catalog-backend": "^3.0.0",
+    "@backstage/plugin-catalog-backend-module-gitlab": "^0.7.1",
+    "@backstage/plugin-catalog-backend-module-logs": "^0.1.12",
+    "@backstage/plugin-catalog-graph": "0.2.28",
+    "@backstage/plugin-org": "0.6.6",
+    "@backstage/plugin-permission-backend": "^0.7.2",
+    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.10",
+    "@backstage/plugin-proxy-backend": "^0.6.4",
+    "@backstage/plugin-scaffolder": "1.12.0",
+    "@backstage/plugin-scaffolder-backend": "^2.1.0",
+    "@backstage/plugin-search": "1.1.1",
+    "@backstage/plugin-search-backend": "^2.0.4",
     "@backstage/plugin-search-backend-module-catalog": "^0.3.3",
-    "@backstage/plugin-search-backend-module-techdocs": "^0.3.6",
-    "@backstage/plugin-techdocs-backend": "^1.10.0",
+    "@backstage/plugin-search-backend-module-techdocs": "^0.4.4",
+    "@backstage/plugin-search-react": "1.5.1",
+    "@backstage/plugin-techdocs": "1.6.0",
+    "@backstage/plugin-techdocs-backend": "^2.0.4",
+    "@backstage/plugin-techdocs-module-addons-contrib": "1.0.11",
+    "@backstage/plugin-techdocs-react": "1.1.4",
+    "@backstage/plugin-user-settings": "0.7.1",
     "better-sqlite3": "^9.0.0",
     "dockerode": "^4.0.0",
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
+    "lerna": "8.2.3",
     "pg": "^8.11.3",
     "winston": "^3.14.2"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.26.0",
+    "@backstage/cli": "^0.33.1",
     "@types/dockerode": "^3.3.0",
     "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.5",
